--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.4",
+    "@reduxjs/toolkit": "^1.6.2",
     "@tailwindcss/line-clamp": "^0.2.1",
+    "dotenv": "^10.0.0",
+    "firebase": "^9.1.1",
+    "firebase-admin": "^9.12.0",
     "next": "latest",
+    "next-auth": "^3.29.0",
     "react": "^17.0.2",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-responsive-carousel": "^3.2.21"
   },
   "devDependencies": {
