--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "@heroicons/react": "^1.0.4",
     "@reduxjs/toolkit": "^1.6.2",
+    "@stripe/stripe-js": "^1.19.1",
     "@tailwindcss/line-clamp": "^0.2.1",
+    "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "firebase": "^9.1.1",
     "firebase-admin": "^9.12.0",
@@ -18,7 +20,8 @@
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "react-responsive-carousel": "^3.2.21"
+    "react-responsive-carousel": "^3.2.21",
+    "stripe": "^8.181.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
